# ByteCrypt

./: "\"crypt_keeper.db\""  .env  .gitignore  Cargo.toml  LICENSE-MIT  Makefile  bar.crypt  bar.txt  cargo.toml  commands.md  config.toml  crypt  crypt_keeper  crypt_keeper.db  db  db.txt  dracula.crypt  dracula.txt  dracula.zst  file.crypt  foo.crypt  foo3.crypt  readme.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  deploy.yaml  deploy.yml  rust.yml
benches/: encryption_benchmark.rs
crypt/: Cargo.toml
crypt-cloud/: Cargo.toml
crypt-cloud/src/: drive.rs  error.rs  lib.rs  oauth.rs  prelude.rs
crypt-core/: Cargo.toml
crypt-core/benches/: encryption_benchmark.rs
crypt-core/src/: common.rs  config.rs  db.rs  encryption.rs  error.rs  fc2.rs  filecrypt.rs  lib.rs  logs.rs  path.rs  prelude.rs  token.rs  ui_repo.rs
crypt-core/src/filetree/: filetree.rs  mod.rs  tree.rs  treeprint.rs
crypt-ui/: Cargo.toml
crypt-ui/src/: cli.rs  directive.rs  error.rs  lib.rs  tui.rs
crypt/benches/: encryption_benchmark.rs
crypt/src/: main.rs
src/: lib.rs  main.rs
src/cloud_storage/: drive.rs  ex.rs  mod.rs  oauth.rs
src/database/: crypt_keeper.db  crypt_keeper.rs  mod.rs
src/filespawn/: file_generator.rs  filespawn.rs  mod.rs
src/filespawn/test_files/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+960 more)
src/ui/: cli.rs  gui.rs  mod.rs  tui.rs  ui.rs  ui_repo.rs
src/util/: common.rs  config.json  config.rs  config.toml  directive.rs  encryption.rs  mod.rs  parse.rs  path.rs  uuid.rs
test_folder/New folder/fofofofofofofofofoof/: apples2.txt
test_folder/folder2/: file3.txt
testerer_folderer/folderer2/folderer3/: asdf.txt
testerer_folderer/folderer4/: lslslslsl.txt
