[package]
name = "bytecrypt"
version = "0.1.0"
authors = ["Ryan M", "Joshua B"]
edition = "2021"
description = "file encryption application"
documentation = "https://github.com/ExtremelyRyan/ByteCrypt"
homepage = "https://github.com/ExtremelyRyan/ByteCrypt"
repository = "https://github.com/ExtremelyRyan/ByteCrypt"
readme = "README.md"
keywords = ["encryption", "files"]
categories = ["command-line-utilities", "file-encryption"]
license = "MIT"
rust-version = "1.70"


[[bin]] 
path = "src/main.rs"
name = "crypt"

# for criterion
[lib]
path = "src/lib.rs"
name = "crypt_lib"

[[bench]]
name = "encryption_benchmark"
harness = false


[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[dependencies]
#General 
anyhow = "1.0.75"

# Google Drive 

#OAuth2
oauth2 = "4.4.0" #latest 4.4.2
reqwest = { version = "0.11", features = ["json"] } # HTTP client
tokio = { version = "1", features = ["full"] } # Async Runtime 
http = "0.2"  
serde_json = "1.0" 
url = { version = "2.1", features = ["serde"] } 
hyper = "1.0.1"
hyper-rustls = "0.24.2"

#Database
lazy_static = "1.4"
rusqlite = { version = "0.30.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"

# Encryption
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
rand = "0.8"

# Hash file comparison
blake2 = "0.10.6" 

# Path walking
walkdir = "2.4.0" 
dunce = "1.0.4"

# Serialization / Deserialization
toml = "0.8.8" 
serde = { version = "1", features = ["derive"] } 

# CLI
clap = { version = "4.4.11", features = ["derive", "cargo"] } 

# TUI
ratatui = "0.24.0"
crossterm = "0.27.0"


# Logging
env_logger = "0.10.1"
log = "0.4.20"

# Zip
zstd = "0.13"