[package]
name = "crypt-cloud"
version = "0.1.0"
edition = "2021" 
publish = false
workspace = "../"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#General 
anyhow = "1.0.75"

crypt-core = { path = "../crypt-core" }

#OAuth2
oauth2 = "4.4.0" #latest 4.4.2
reqwest = { version = "0.11", features = ["json"] } # HTTP client
tokio = { version = "1", features = ["full"] } # Async Runtime 
# http = "1"  
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0" 
url = { version = "2.1", features = ["serde"] } 
# hyper = "1.0.1"
hyper-rustls = "0.24.2"
async-recursion = "1.0.5" # Handles Async Recursion boxing
lazy_static = "1.4"

