[package]
name = "crypt-cloud"
version = "0.1.0"
edition = "2021" 
publish = false
workspace = "../"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#General 
thiserror =  { workspace = true }

crypt-core = { path = "../crypt-core" }

reqwest = { version = "0.12", features = ["json"] } # HTTP client
tokio = { version = "1", features = ["full"] } # Async Runtime 
serde_json = "1.0"
async-recursion = "1.0.5" # Handles Async Recursion boxing