[package]
name = "crypt-core"
version = "0.1.0"
edition = "2021" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#General 
anyhow = "1.0.75"
lazy_static = "1.4"

oauth2 = "4.4.0" #latest 4.4.2
url = { version = "2.1", features = ["serde"] } 

# Encryption
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
rand = "0.8"

# Hash file comparison
blake2 = "0.10.6" 

# Path walking
walkdir = "2.4.0" 
dunce = "1.0.4"

# Serialization / Deserialization
toml = "0.8.8" 
serde = { version = "1", features = ["derive"] }
csv = "1.3.0"

# Logging
env_logger = "0.10.1"
log = "0.4.20"

# Zip
zstd = "0.13"
 
#Database 
rusqlite = { version = "0.30.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"