[package]
name = "crypt-core"
version = "0.1.0"
edition = "2021"
publish = false
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "encryption_benchmark"
harness = false

[dependencies]

#General 
lazy_static = { workspace = true }
logfather = { workspace = true }
thiserror =  { workspace = true }

# Encryption
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
rand = "0.8"

# Hash file comparison
blake2 = "0.10.6" 

# Path walking
walkdir = "2.4.0" 
dunce = "1.0.4"

# Serialization / Deserialization
toml = "0.8.8" 
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.111"
csv = "1.3.0"

# Logging
chrono = { version = "0.4.31", features = ["serde"] }

# auto open web-browser
webbrowser = "0.8.12"

# Zip
zstd = "0.13"
 
#Database 
rusqlite = { version = "0.31.0", features = ["bundled", "functions"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
oauth2 = "4.4.0" #latest 4.4.2
url = { version = "2.1", features = ["serde"] } 

ansi_term = "0.12.1"
