[package]
name = "crypt-ui"
version = "0.1.0"
edition = "2021" 
publish = false
workspace = "../"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
tokio = { version = "1", features = ["full"] } # Async Runtime 
reqwest = { version = "0.11", features = ["json","multipart"] } # HTTP client
# CLI
clap = { version = "4.4.11", features = ["derive", "cargo"] }
clap-markdown = "0.1.3"
serde_json = "1.0.111"
crypt-cloud = { path = "../crypt-cloud" } 

thiserror =  { workspace = true }