[package]
name = "crypt"
version = "0.1.0"
authors = ["Ryan M", "Joshua B"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypt-ui = { path = "../crypt-ui" }

anyhow = "1"

# Logging
# env_logger = "0.10.1"
# log = "0.4.20"
